# HDF5-External-Filter-Plugins

./: .gitignore  CMakeLists.txt  README.rst  conanfile.txt  hdf5_plugin_path_patch.xml
BLOSC/: CMakeLists.txt  COPYING  CTestConfig.cmake  README.txt  config.h.in  configure  configure.ac  makefile.am  makefile.in
BLOSC/Additional_Legal/: PyTables_Copyrights_and_Licenses.txt
BLOSC/config/cmake/: CTestCustom.cmake  ConfigureChecks.cmake  H5BLOSCMacros.cmake  README.txt.cmake.in  cacheinit.cmake  config.h.in  h5blosc-config-version.cmake.in  h5blosc-config.cmake.build.in  h5blosc-config.cmake.in  h5blosc-config.cmake.install.in
BLOSC/example/: CMakeLists.txt  h5ex_d_blosc.c  makefile.am  makefile.in  test.sh.in
BLOSC/example/testfiles/: h5ex_d_blosc.ddl  h5ex_d_blosc.tst  h5repack_layout.h5-ud_convert.ddl  ud_convert.h5repack_layout.h5.tst
BLOSC/src/: CMakeLists.txt  H5Zblosc.c  makefile.am  makefile.in
BLOSC/src/internal-complibs/blosc-1.4.1/: blosc.c
BZIP2/: CMakeLists.txt  CMakeLists.txt.old  CTestConfig.cmake  README.txt  aclocal.m4  config.h.in  configure  configure.ac  libtool  makefile.am  makefile.in
BZIP2/config/cmake/: CTestCustom.cmake  ConfigureChecks.cmake  H5BZ2Macros.cmake  README.txt.cmake.in  cacheinit.cmake  h5bzip2-config-version.cmake.in  h5bzip2-config.cmake.build.in  h5bzip2-config.cmake.in  h5bzip2-config.cmake.install.in  runTest.cmake
BZIP2/example/: CMakeLists.txt  h5ex_d_bzip2.c  makefile.am  makefile.in  test.sh  test.sh.in
BZIP2/example/testfiles/: h5ex_d_bzip2.ddl  h5ex_d_bzip2.tst  h5repack_layout.h5-ud_convert.ddl
BZIP2/src/: CMakeLists.txt  CMakeLists.txt.old  H5Zbzip2.c  makefile.am  makefile.in
BZIP2/test/: CMakeLists.txt  create_test_data.py  h5ex_d_bzip2.c  read_ui8_test.c  ui8_data.h5
LZ4/: CMakeLists.txt  CMakeLists.txt.old  CTestConfig.cmake  README.txt  aclocal.m4  config.h.in  configure  configure.ac  libtool  makefile.in
LZ4/Additional_Legal/: h5py_Copyrights_and_Licenses.txt
LZ4/config/cmake/: ConfigureChecks.cmake  H5LZ4Macros.cmake  NSIS.InstallOptions.ini.in  README.txt.cmake.in  cacheinit.cmake  h5lz4-config-version.cmake.in  h5lz4-config.cmake.build.in  h5lz4-config.cmake.in  h5lz4-config.cmake.install.in  runTest.cmake
LZ4/example/: CMakeLists.txt  h5ex_d_lz4.c  makefile.am  makefile.in  test.sh.in
LZ4/example/testfiles/: h5ex_d_lz4.ddl  h5ex_d_lz4.tst  h5repack_layout.h5-ud_convert.ddl  ud_convert.h5repack_layout.h5.tst
LZ4/src/: CMakeLists.txt  CMakeLists.txt.old  H5Zlz4.c  makefile.am  makefile.in
LZ4/test/: CMakeLists.txt  h5ex_d_lz4.c
bitshuffle/: CMakeLists.txt
bitshuffle/src/: CMakeLists.txt  bitshuffle.c  bshuf_h5filter.c  bshuf_h5filter.h
bitshuffle/test/: CMakeLists.txt  bshuf_exists.c  bslz4_3x4x5_testdata.h5  read_ui16_test.c  read_ui32_test.c  read_ui8_test.c
cmake/: ConfigureLZ4.cmake  FindLZ4.cmake
docs/: Makefile  README.md  build.notation  build.uml  index.md  proposal.tex  references.bib  techrequirements.tex
docs/examples/: bitshuffle.py
resources/: LICENSE.txt
